Set up initial folder structure

--- a/PennyPlanner.csproj
+++ b/PennyPlanner.csproj
@@ -10,4 +10,15 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Validation\" />
+    <Folder Include="Tests\" />
+    <Folder Include="Repository\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
