Implement jwt auth

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Jwt": {
+        "Key": "f5e2570c-83e3-4d88-b1ff-74dc1e45bca7"
     }
-  },
-  "AllowedHosts": "*"
 }
