Set up logging middleware and serilog

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,14 @@
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
+        },
+        "File": {
+            "LogLevel": {
+                "Default": "Information"
+            },
+            "Path": "Logs/app_log.txt",
+            "RollingInterval": "Day",
+            "RetainedFileCountLimit": 7
         }
     },
     "AllowedHosts": "*",
